--- a/src/scss/animations/_slidein.scss
+++ b/src/scss/animations/_slidein.scss
@@ -8,12 +8,12 @@
 
 @keyframes slidein {
   0% {
-    transform: translate3d(-156.66vw, -42.9vh,0);
+    transform: translate3d(-100vw, -42.9vh,0);
   }
-  80% {
-    transform: translate3d(-156.66vw, -42.9vh,0);
+  30% {
+    transform: translate3d(-100vw, -42.9vh,0);
   }
   100% {
-    transform: translate3d(-66.66vw, -42.9vh,0);
+    transform: translate3d(0, -42.9vh,0);
   }
 }
